adjusted and fixed the responsive breaks on the blog page

--- a/css/grids.css
+++ b/css/grids.css
@@ -102,6 +102,14 @@ body {
 		width: 50%;
 	}
 
+	.blog-articles-container .grid-col-3of4{
+		width: 75%;
+	}
+
+	.blog-articles-container .grid-col-1of4{
+		width: 25%;
+	}
+
 	#stockists .grid-col-2of3 {
 		width: 66.6666667%;
 
@@ -114,6 +122,7 @@ body {
 	footer .grid-col-3of12 {
 		width: 100%;
 	}
+
 
 }
 
@@ -188,14 +197,22 @@ body {
 	.grid-col-2of3 {
 		width: 66.6666667%;
 	}
+
+	
+	.blog-grid .grid-col-1of3 {
+		width: 33%;
+
+	}
+
+
 	#stockists .grid-col-1of2 {
 		width: 50%;
-
 	}	
 
 	.product-listing .grid-col-1of4 {
 		width: 25%;
 	}
+
 	.large-featured {
 		height: 630px;
 	}
